--- a/.github/workflows/main_techroute-web.yml
+++ b/.github/workflows/main_techroute-web.yml
@@ -23,17 +23,17 @@ jobs:
         with:
           node-version: '22.x'
 
-      - name: npm install, build, and test
+      - name: npm install and build
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
+        working-directory: ./client # <-- CORREÇÃO 1
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: client/build # <-- CORREÇÃO 2
 
   deploy:
     runs-on: ubuntu-latest
@@ -62,4 +62,3 @@ jobs:
           app-name: 'techroute-web'
           slot-name: 'Production'
           package: .
-          
