feat: Implement advanced features and fixes
- Fixed role-based authentication and authorization logic. - Implemented checklist display in visit details
     modal. - Refactored components for clarity and removed redundant API calls. - Updated README with comprehensive documentation and setup instructions.

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -13,3 +13,5 @@ starlette==0.47.3
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 uvicorn==0.35.0
+passlib[bcrypt]
+python-jose[cryptography]
