--- a/.github/workflows/main_techroute.yml
+++ b/.github/workflows/main_techroute.yml
@@ -59,6 +59,6 @@ jobs:
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
-          app-name: 'techroute'
+          app-name: 'techroute-api-yggor-2'
           slot-name: 'Production'
           
