chore: Add debug commands to build step

--- a/.github/workflows/main_techroute.yml
+++ b/.github/workflows/main_techroute.yml
@@ -26,6 +26,8 @@ jobs:
 
       - name: Install dependencies
         run: |
+          pwd
+          ls -la
           python -m venv venv
           source venv/bin/activate
           pip install -r requirements.txt
