--- a/.github/workflows/main_techroute.yml
+++ b/.github/workflows/main_techroute.yml
@@ -13,8 +13,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read #This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
@@ -31,20 +29,22 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           pip install -r requirements.txt
-        working-directory: ./server # <-- CORREÇÃO 1
+        working-directory: ./server
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
         with:
           name: python-app
-          path: ./server # <-- CORREÇÃO 2
+          path: ./server
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
 
     steps:
       - name: Download artifact from build job
@@ -63,4 +63,3 @@ jobs:
         with:
           app-name: 'techroute-api-yggor-2'
           slot-name: 'Production'
-          
