--- a/client/package.json
+++ b/client/package.json
@@ -29,5 +29,8 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "vite": "^7.1.2"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
