Set VITE_API_URL in GitHub Actions workflow
Add environment variable for VITE_API_URL in workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,7 @@ jobs:
           app_location: "/client"
           api_location: ""
           output_location: "build"
+        env:
+          VITE_API_URL: ${{ secrets.VITE_API_URL }}
+
+
