--- a/.github/workflows/main_techroute-api-yggor-2.yml
+++ b/.github/workflows/main_techroute-api-yggor-2.yml
@@ -14,22 +14,18 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
+    # --- PASSO CRUCIAL QUE ESTAVA FALTANDO ---
+    - name: Azure Login
+      uses: azure/login@v1
       with:
-        python-version: '3.11' # Mude se a sua versão for diferente
+        creds: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_BACKEND }}
 
-    - name: Install dependencies into the server folder
-      run: |
-        python -m pip install --upgrade pip
-        pip install --target="server/__pypackages__/lib/site-packages" -r server/requirements.txt
-
+    # --- PASSO DE DEPLOY QUE AGORA VAI FUNCIONAR ---
     - name: 'Deploy to Azure Web App'
       uses: azure/webapps-deploy@v2
       with:
         app-name: 'techroute-api-yggor-2'
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_BACKEND }}
         package: ./server
-
           
+
 
