--- a/.github/workflows/main_techroute-api-yggor-2.yml
+++ b/.github/workflows/main_techroute-api-yggor-2.yml
@@ -1,31 +1,49 @@
-name: Deploy Python Backend to Azure App Service - techroute-api-yggor-2
-
+name: deploy-backend
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
     paths:
-      - 'server/**'
+      - "server/**"
+  workflow_dispatch:
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    
+    permissions:
+      id-token: write    # OIDC
+      contents: read
     steps:
-    - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    # --- PASSO CRUCIAL QUE ESTAVA FALTANDO ---
-    - name: Azure Login
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_BACKEND }}
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
 
-    # --- PASSO DE DEPLOY QUE AGORA VAI FUNCIONAR ---
-    - name: 'Deploy to Azure Web App'
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'techroute-api-yggor-2'
-        package: ./server
-          
+      - name: Install dependencies (fail fast)
+        working-directory: server
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          python - << 'PY'
+import fastapi, uvicorn, gunicorn
+print("deps ok")
+PY
+
+      - name: Azure Login (OIDC)
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: techroute-api-yggor-2
+          package: ./server
+
+
 
 
