--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -1,4 +1,5 @@
 name: deploy-backend
+
 on:
   push:
     branches: [ main ]
@@ -7,27 +8,27 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
       contents: read
-    steps:
-      - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.12"
 
-      - name: Install deps (fail fast)
+      # (Opcional) sanity check local — sem heredoc para evitar erro de YAML
+      - name: Install dependencies
         working-directory: server
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          python - << 'PY'
-import fastapi, uvicorn, gunicorn
-print("deps ok")
-PY
 
       - name: Azure Login (OIDC)
         uses: azure/login@v2
@@ -41,3 +42,4 @@ PY
         with:
           app-name: techroute-api-yggor-2
           package: ./server
+
