--- a/client/staticwebapp.config.json
+++ b/client/staticwebapp.config.json
@@ -1,7 +1,7 @@
 {
   "navigationFallback": {
     "rewrite": "/index.html",
-    "exclude": ["/assets/**"]
+    "exclude": ["/assets/*"]
   },
   "mimeTypes": {
     ".js": "text/javascript",
